Add background to "My Journey"

--- a/docs/_data/articles.yml
+++ b/docs/_data/articles.yml
@@ -84,6 +84,7 @@
     ![HT App on tablet](images/ht_tablet.jpg){: width="75%" height="auto" }
 
 - Title: My Journey to a Ham Radio License
+  Background: N2VLV_Extra.png
   Description: |
     When I was in Junior High School we visited a family friend
     who was an amateur radio operator.  I was intrigued by
