--- a/.github/workflows/check-whitespace.yml
+++ b/.github/workflows/check-whitespace.yml
@@ -26,4 +26,4 @@ jobs:
 
       # 4️⃣ Run all pre-commit hooks on all files
       - name: Run pre-commit hooks
-        run: pre-commit run --all-files
+        run: pre-commit run --all-files --show-diff-on-failure --color=always
