--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,4 +1,4 @@
-exclude: ^(docs/_site/|docs/css/|docs/fonts/|docs/js/)
+exclude: ^(_dl/|docs/_site/|docs/css/|docs/fonts/|docs/js/)
 
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
